--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "postcss": "7.0.16"
+  },
   "devDependencies": {
-    "prettier": "1.16.4",
-    "prettier-stylelint": "0.4.2",
-    "stylelint": "9.10.1",
-    "stylelint-config-standard": "18.2.0",
-    "stylelint-config-idiomatic-order": "6.2.0"
+    "prettier": "1.17.1",
+    "stylelint-prettier": "1.1.1",
+    "stylelint": "10.0.1",
+    "stylelint-config-prettier": "5.2.0"
   }
 }
